js/js.translator/testData/incremental/invalidation/removeProducerModuleWithStaleConsumer/lib2/l2.0.kt
package bridge

import upstream.foo

fun bar(): String = foo()
